plugins {
    id "java"
    id "idea"
    id "io.spring.dependency-management" version "1.0.11.RELEASE"
    id "org.springframework.boot" version "${springBootVersion}"
}

subprojects {
    apply plugin: "java"
    apply plugin: "idea"
    apply plugin: "io.spring.dependency-management"
    apply plugin: "org.springframework.boot"

    group = "pickjob"
    version = "0.0.1"

    configurations {
        implementation {
            exclude group: "org.apache.logging.log4j", module: "log4j-to-slf4j"
            exclude group: "ch.qos.logback", module: "logback-classic"
        }
    }

    dependencies {
        // log4j
        implementation "com.lmax:disruptor:3.4.2"
        // commons lang
        implementation "org.apache.commons:commons-lang3:3.8"
        // springdoc
        implementation "org.springdoc:springdoc-openapi-common:${springdocVersion}"
        implementation "org.springdoc:springdoc-openapi-ui:${springdocVersion}"
        implementation "org.springdoc:springdoc-openapi-hateoas:${springdocVersion}"
        implementation "org.springdoc:springdoc-openapi-data-rest:${springdocVersion}"
        // spring 其他依赖
        implementation "org.javassist:javassist:3.20.0-GA"
        implementation "org.aspectj:aspectjweaver:1.9.3"
        implementation "cglib:cglib:3.2.11"
        // spring boot starter
        implementation "org.springframework.boot:spring-boot-starter-log4j2"
        implementation "org.springframework.boot:spring-boot-starter-aop"
        implementation "org.springframework.boot:spring-boot-starter-cache"
        implementation "org.springframework.boot:spring-boot-starter-web"
        implementation "org.springframework.boot:spring-boot-starter-actuator"
        // prometheus 支持
        implementation "io.micrometer:micrometer-registry-prometheus:1.5.6"
        // assist
        implementation "org.springframework.boot:spring-boot-configuration-processor"
    }

    compileJava {
        sourceCompatibility = 15
        targetCompatibility = 15
        options.encoding = "UTF-8"
        options.compilerArgs.add("--enable-preview")
    }

    compileTestJava {
        sourceCompatibility = 15
        targetCompatibility = 15
        options.encoding = "UTF-8"
        options.compilerArgs.add("--enable-preview")
    }

    repositories {
        maven {
            url "https://maven.aliyun.com/repository/public"
        }
        jcenter()
        mavenCentral()
    }

    idea {
        module {
            jdkName = "15"
            downloadJavadoc = true
            downloadSources = true
        }
    }
}